<resources>
    <string name="app_name">sMEdy</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="signout">Sign out</string>
    <string name="register_now">Register now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appointment">Appointment</string>
    <string name="list">List</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="nama">nama</string>
    <string name="tahun">tahun</string>
    <string name="location">Location</string>
    <string name="img">img</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="psychologist">Psychologist</string>
    <string name="psikiater_nama">Name : </string>
    <string name="psikiater_pengalaman">Work Experience : </string>
    <string name="psikiater_lulusan">Lulusan : </string>
    <string name="psikiater_lokasi">Location : </string>
    <string name="psikiater_biaya">Cost : </string>
    <string name="per_meet">/ Hours</string>
    <string name="date">Date :</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="rupiah">Rp. </string>
    <string name="welcome">Welcome,</string>
    <string name="meditation">Meditation For You</string>
    <string name="relax">Relax Your Mind</string>
    <string name="see_all">See All</string>
    <string name="upcoming_appointment">Upcoming Appointment</string>
    <string name="black_large_bullet">\u2B24</string>
    <string name="our_psychologist">Our Psychologist</string>
    <string name="rating">0.0</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_description">Fill your email and password.</string>
    <string name="register_description">Fill your username, email and password.</string>
    <string name="Serenity">Serenity</string>
    <string name="profile">Profile</string>
    <string name="user_information">User Information</string>
    <string name="save">Save</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="number">0</string>
    <string name="contact_information">Contact Information</string>
    <string name="working_hour">Working Hour</string>
    <string name="email">Email</string>
    <string name="schedule">Schedule</string>
    <string name="working_hour1">08.00</string>
    <string name="working_hour2">10.00</string>
    <string name="working_hour3">13.00</string>
    <string name="musik">Musik</string>
    <string name="meditasi">Meditasi</string>
</resources>