<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.PsychologistDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarPsychologistActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/psychologist" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarPsychologistActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgProfilePsychologistActivity"
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:scaleType="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars[0]" />

            <TextView
                android:id="@+id/txtNamePsychologistActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgProfilePsychologistActivity"
                app:layout_constraintTop_toTopOf="@+id/imgProfilePsychologistActivity" />

            <TextView
                android:id="@+id/txtSpecialistPsychologistActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-light"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="@+id/txtNamePsychologistActivity"
                app:layout_constraintStart_toStartOf="@+id/txtNamePsychologistActivity"
                app:layout_constraintTop_toBottomOf="@+id/txtNamePsychologistActivity" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:tint="@color/primary_500"
                app:layout_constraintStart_toStartOf="@+id/txtSpecialistPsychologistActivity"
                app:layout_constraintTop_toBottomOf="@+id/txtSpecialistPsychologistActivity"
                app:srcCompat="@drawable/ic_baseline_star_rate_24" />

            <TextView
                android:id="@+id/txtRatingPsychologistActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/rating"
                app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                app:layout_constraintEnd_toEndOf="@+id/txtSpecialistPsychologistActivity"
                app:layout_constraintStart_toEndOf="@+id/imageView10"
                app:layout_constraintTop_toTopOf="@+id/imageView10" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="@+id/txtRatingPsychologistActivity"
                app:layout_constraintStart_toStartOf="@+id/imgProfilePsychologistActivity"
                app:layout_constraintTop_toBottomOf="@+id/imgProfilePsychologistActivity">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white_smoke">

                    <TextView
                        android:id="@+id/txtExperiencePsychologistActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/number"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textColor="@color/dark_grey"
                        app:layout_constraintEnd_toStartOf="@+id/divider2"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="24dp"
                        android:alpha="0.6"
                        android:text="@string/experience"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textColor="@color/dark_grey"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/txtExperiencePsychologistActivity"
                        app:layout_constraintStart_toStartOf="@+id/txtExperiencePsychologistActivity"
                        app:layout_constraintTop_toBottomOf="@+id/txtExperiencePsychologistActivity" />

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintBottom_toBottomOf="@+id/textView14"
                        app:layout_constraintEnd_toStartOf="@+id/txtEducationPsychologistActivity"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/txtExperiencePsychologistActivity"
                        app:layout_constraintTop_toTopOf="@+id/txtExperiencePsychologistActivity" />

                    <TextView
                        android:id="@+id/txtEducationPsychologistActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textColor="@color/dark_grey"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/divider2"
                        app:layout_constraintTop_toTopOf="@+id/divider2" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:alpha="0.6"
                        android:text="@string/education"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textColor="@color/dark_grey"
                        app:layout_constraintBottom_toBottomOf="@+id/divider2"
                        app:layout_constraintEnd_toEndOf="@+id/txtEducationPsychologistActivity"
                        app:layout_constraintStart_toStartOf="@+id/txtEducationPsychologistActivity"
                        app:layout_constraintTop_toBottomOf="@+id/txtEducationPsychologistActivity" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/contact_information"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="@+id/cardView6"
                app:layout_constraintStart_toStartOf="@+id/cardView6"
                app:layout_constraintTop_toBottomOf="@+id/cardView6" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:tint="@color/primary_500"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/textView16"
                app:srcCompat="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/txtLocationPsychologistActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/location"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                app:layout_constraintEnd_toEndOf="@+id/textView16"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="@+id/imageView11" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:tint="@color/primary_500"
                app:layout_constraintStart_toStartOf="@+id/imageView11"
                app:layout_constraintTop_toBottomOf="@+id/imageView11"
                app:srcCompat="@drawable/ic_baseline_local_phone_24" />

            <TextView
                android:id="@+id/txtPhonePsychologistActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/number"
                app:layout_constraintBottom_toBottomOf="@+id/imageView12"
                app:layout_constraintEnd_toEndOf="@+id/txtLocationPsychologistActivity"
                app:layout_constraintStart_toEndOf="@+id/imageView12"
                app:layout_constraintTop_toTopOf="@+id/imageView12" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:tint="@color/primary_500"
                app:layout_constraintStart_toStartOf="@+id/imageView12"
                app:layout_constraintTop_toBottomOf="@+id/imageView12"
                app:srcCompat="@drawable/ic_baseline_email_24" />

            <TextView
                android:id="@+id/txtEmailPsychologistActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/email"
                app:layout_constraintBottom_toBottomOf="@+id/imageView13"
                app:layout_constraintEnd_toEndOf="@+id/txtPhonePsychologistActivity"
                app:layout_constraintStart_toEndOf="@+id/imageView13"
                app:layout_constraintTop_toTopOf="@+id/imageView13" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/working_hour"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="@+id/txtEmailPsychologistActivity"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imageView13"
                app:layout_constraintTop_toBottomOf="@+id/imageView13" />

            <Button
                android:id="@+id/BtnWH1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/working_hour1"
                app:layout_constraintEnd_toStartOf="@+id/BtnWH2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <Button
                android:id="@+id/BtnWH2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/working_hour2"
                app:layout_constraintBottom_toBottomOf="@+id/BtnWH1"
                app:layout_constraintEnd_toStartOf="@+id/BtnWH3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/BtnWH1"
                app:layout_constraintTop_toTopOf="@+id/BtnWH1" />

            <Button
                android:id="@+id/BtnWH3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/working_hour3"
                app:layout_constraintBottom_toBottomOf="@+id/BtnWH2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/BtnWH2"
                app:layout_constraintTop_toTopOf="@+id/BtnWH2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/schedule"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/BtnWH1" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <Button
                android:id="@+id/btnMakeAppointmentPsychologistActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                android:text="@string/make_appointment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/calendarView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>