<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConsCardViewPsikiater"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/CvPsikiater"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConsCvPsikiater"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ImgFotoCvPsikiater"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/img"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/TxtNamaCvPsikiater"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:maxLines="1"
                android:text="@string/nama"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ImgFotoCvPsikiater"
                app:layout_constraintTop_toTopOf="@+id/ImgFotoCvPsikiater" />

            <TextView
                android:id="@+id/TxtTahunCvPsikiater"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:maxLines="2"
                android:text="@string/tahun"
                android:textColor="#00BCD4"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/divider2"
                app:layout_constraintStart_toStartOf="@+id/TxtNamaCvPsikiater"
                app:layout_constraintTop_toBottomOf="@+id/TxtNamaCvPsikiater" />

            <TextView
                android:id="@+id/TxtLokasiCvPsikiater"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:maxLines="2"
                android:text="@string/lokasi"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/divider2"
                app:layout_constraintEnd_toEndOf="@+id/TxtNamaCvPsikiater"
                app:layout_constraintStart_toEndOf="@+id/divider2"
                app:layout_constraintTop_toTopOf="@+id/divider2" />

            <View
                android:id="@+id/divider2"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/TxtTahunCvPsikiater"
                app:layout_constraintTop_toBottomOf="@+id/TxtNamaCvPsikiater" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>