<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConsCardViewPsikiater"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/CvPsikiater"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConsCvPsikiater"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ImgFotoCvPsikiater"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/img"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/TxtNamaCvPsikiater"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:maxLines="1"
                android:text="@string/nama"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ImgFotoCvPsikiater"
                app:layout_constraintTop_toTopOf="@+id/ImgFotoCvPsikiater" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/TxtNamaCvPsikiater"
                app:layout_constraintStart_toStartOf="@+id/TxtNamaCvPsikiater"
                app:layout_constraintTop_toBottomOf="@+id/TxtNamaCvPsikiater" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/ImgFotoCvPsikiater"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:srcCompat="@drawable/ic_baseline_star_rate_24" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/rating"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                app:layout_constraintEnd_toStartOf="@+id/imageView9"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="@+id/imageView8" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toStartOf="@+id/textView12"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10"
                app:srcCompat="@drawable/ic_baseline_access_time_24" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                app:layout_constraintEnd_toEndOf="@+id/textView8"
                app:layout_constraintStart_toEndOf="@+id/imageView9"
                app:layout_constraintTop_toTopOf="@+id/imageView9" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>